Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13450

shell32: Fix SHFileOperation

    XMLWordPrintable

Details

    Description

      We have to improve SHFileOperation and SHGetFileInfo functions in shell32.dll to work shell file operations correctly.

      Attachments

        1. SHGetFileInfo.patch
          0.8 kB
          Katayama Hirofumi MZ
        2. patch8.patch
          3 kB
          Katayama Hirofumi MZ
        3. shlfileop-ros-after-patch8.log
          0.6 kB
          Katayama Hirofumi MZ
        4. shlfileop-win10.log
          0.3 kB
          Katayama Hirofumi MZ
        5. shlfileop-ros-before.log
          2 kB
          Katayama Hirofumi MZ
        6. STILLSHIT-filtered.log
          24 kB
          Katayama Hirofumi MZ
        7. STILLSHIT.log
          2.45 MB
          Katayama Hirofumi MZ
        8. no-more-shit.png
          26 kB
          Katayama Hirofumi MZ

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              3 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: