[0.4.9][SHELL32] Fix SHFileOperation Move operation (#1487)

Reduce failures of Move operation of shell32!SHFileOperation function. CORE-13450

And also fixes regression CORE-13176 "Drag and drop with multiple files is broken"
which regressed by SVN r74380 == git
fd91fe3337ca9e758cc9f07aea8503fdd24da206

fix picked from commit 0.4.12-dev-1080-g
c65156002c184222e8307e0299ece359809db4dc